Add filtered scan functionality to file explorer
Introduces tests and integration for scanning directories and files with extension filtering in FileExplorerController and FileExplorerService. Also refactors some test cases to remove unnecessary CSRF usage and updates assertion style in ZipArchiveServiceUnitTests (with AI advice).